2000-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (undef_cell):  Removed, replaced by:

	(undef_object):  Added to replace undef_cell.

	(scm_lookupcar, scm_lookupcar1):  Use undef_object.

	* eval.c (scm_lookupcar, scm_lookupcar1, scm_m_atfop,
	scm_m_atbind, CHECK_EQVISH, SCM_CEVAL), procs.h (SCM_SETCODE):
	Don't perform arithmetic operations with SCM values.

	* eval.c (scm_lookupcar, scm_lookupcar1, scm_m_atfop,
	scm_m_atbind, scm_eval_args, scm_deval_args, SCM_CEVAL):  Use
	symbolic names for the tc3 type codes.

	* eval.c (scm_m_define, SCM_CEVAL, SCM_APPLY):  Remove redundant
	cast to SCM.

	* eval.c (scm_eval_args, scm_deval_args, SCM_CEVAL):  Made the
	access of the struct vcell element explicit.

2000-04-19  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* struct.c (scm_struct_free_light, scm_struct_free_standard,
	scm_struct_free_entity): Use `scm_must_free' instead of	`free'.

	* procs.c (scm_make_subr_opt): Tell scm_must_realloc that we're
	realloc:ing scm_subr_table ("what" instead of "who").

	* numbers.c (scm_adjbig): Ditto.

2000-04-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* unif.c (l2ra):  Don't eliminate the call to scm_array_set_x
	itself, as was done in the previous 'patch'.  (Thanks to Radey
	Shouman)

2000-04-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* options.c (scm_options), read.c (recsexpr):  Remove redundant
	SCM_IMP test.

	* print.c (scm_iprin1):  Made the access of the struct vcell
	element explicit.

	* print.h (SCM_PRINT_CLOSURE):  Added call to SCM_PACK.

	* ramap.c (scm_ra_eqp, ra_compare), unif.c
	(scm_uniform_vector_ref, scm_cvref, rapr1):  Separated accesses to
	unsigned long and signed long arrays and clarified the way the
	access is performed.

	* ramap.c (scm_array_map_x, raeql), read.c (scm_lreadr), stacks.c
	(narrow_stack), unif.c (scm_cvref, scm_uniform_array_read_x,
	scm_raprin1):  Use SCM_EQ_P to compare SCM values.

	* strings.c (scm_makstr):  Treat the msymbol slots as a field of
	scm_bits_t values.
