@@ -1,5 +1,13 @@
 2000-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
+	* print.c (scm_iprin1):  Don't assign zero to SCM values, use
+	SCM_UNDEFINED instead.
+
+	* weaks.c (scm_make_weak_vector):  Fix assignment of zero to a
+	vector element.  (Still to be improved)
+
+2000-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
 	* eval.c (undef_cell):  Removed, replaced by:
 
 	(undef_object):  Added to replace undef_cell.
